frontend & backend updated