@@ -2,95 +2,69 @@ package com.example.travel_agency.service.impl;
 
 import com.example.travel_agency.dto.PaymentDTO;
 import com.example.travel_agency.entity.Payment;
-import com.example.travel_agency.entity.User;
 import com.example.travel_agency.repository.PaymentRepo;
-import com.example.travel_agency.repository.UsersRepo;
 import com.example.travel_agency.service.PaymentService;
-import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class PaymentServiceImpl implements PaymentService {
 
-    @Autowired
-    private PaymentRepo paymentRepo;
+    private final PaymentRepo paymentRepository;
 
     @Autowired
-    private UsersRepo usersRepo;
-
-    @Autowired
-    private ModelMapper modelMapper;
-
-    @Override
-    public void save(PaymentDTO paymentDTO) {
-        Payment payment = modelMapper.map(paymentDTO, Payment.class);
-
-        // Validate User
-        Optional<User> optUser = usersRepo.findById(paymentDTO.getUserId());
-        if (optUser.isEmpty()) {
-            throw new RuntimeException("User not found with ID: " + paymentDTO.getUserId());
-        }
-
-        // Set User reference
-        payment.setUser(optUser.get());
-
-        paymentRepo.save(payment);
+    public PaymentServiceImpl(PaymentRepo paymentRepository) {
+        this.paymentRepository = paymentRepository;
     }
 
     @Override
-    public void update(PaymentDTO paymentDTO) {
-        Optional<Payment> optPayment = paymentRepo.findById(paymentDTO.getId());
-        if (optPayment.isEmpty()) {
-            throw new RuntimeException("Payment not found with ID: " + paymentDTO.getId());
-        }
-
-        Payment payment = modelMapper.map(paymentDTO, Payment.class);
-
-        // Validate User
-        Optional<User> optUser = usersRepo.findById(paymentDTO.getUserId());
-        if (optUser.isEmpty()) {
-            throw new RuntimeException("User not found with ID: " + paymentDTO.getUserId());
-        }
-
-        payment.setUser(optUser.get());
-
-        paymentRepo.save(payment);
-    }
-
-    @Override
-    public void delete(Long id) {
-        if (!paymentRepo.existsById(id)) {
-            throw new RuntimeException("Payment not found with ID: " + id);
-        }
-        paymentRepo.deleteById(id);
+    public PaymentDTO savePayment(PaymentDTO dto) {
+        Payment payment = mapToEntity(dto);
+        Payment saved = paymentRepository.save(payment);
+        return mapToDTO(saved);
     }
 
     @Override
     public PaymentDTO getPaymentById(Long id) {
-        Optional<Payment> payment = paymentRepo.findById(id);
-        if (payment.isEmpty()) {
-            throw new RuntimeException("Payment not found with ID: " + id);
-        }
-        return modelMapper.map(payment.get(), PaymentDTO.class);
+        Optional<Payment> optional = paymentRepository.findById(id);
+        return optional.map(this::mapToDTO).orElse(null);
     }
 
     @Override
     public List<PaymentDTO> getAllPayments() {
-        List<Payment> payments = paymentRepo.findAll();
-        return payments.stream()
-                .map(payment -> modelMapper.map(payment, PaymentDTO.class))
-                .toList();
+        return paymentRepository.findAll()
+                .stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<PaymentDTO> getPaymentsByUserId(Long userId) {
-        List<Payment> payments = paymentRepo.findByUserId(userId);
-        return payments.stream()
-                .map(payment -> modelMapper.map(payment, PaymentDTO.class))
-                .toList();
+    public void deletePayment(Long id) {
+        paymentRepository.deleteById(id);
+    }
+
+    // ---------- Mapping Methods ----------
+    private Payment mapToEntity(PaymentDTO dto) {
+        Payment payment = new Payment();
+        payment.setId(dto.getId());
+        payment.setCardHolderName(dto.getCardHolderName());
+        payment.setCardNumber(dto.getCardNumber());
+        payment.setExpirationDate(dto.getExpirationDate());
+        payment.setCvv(dto.getCvv());
+        return payment;
+    }
+
+    private PaymentDTO mapToDTO(Payment payment) {
+        PaymentDTO dto = new PaymentDTO();
+        dto.setId(payment.getId());
+        dto.setCardHolderName(payment.getCardHolderName());
+        dto.setCardNumber(payment.getCardNumber());
+        dto.setExpirationDate(payment.getExpirationDate());
+        dto.setCvv(payment.getCvv());
+        return dto;
     }
 }
